<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.lucas.appmanutenao.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="MANUTENÇÃO"
                android:background="#ccc"
                android:textSize="30dp"
                android:textAlignment="center"
                android:textColor="#00f"/>

            <TextView
                style="@style/estiloLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#500f"
                android:text="Cliente" />

            <EditText
                style="@style/estiloCampos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintCliente"
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDescricao"
                style="@style/estiloLabel"/>

            <EditText
                style="@style/estiloCampos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etDescricao"
                android:hint="@string/hintDescricao" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtValor"
                style="@style/estiloLabel"/>

            <EditText
                style="@style/estiloCampos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintValor"
                android:inputType="numberDecimal" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCategoria"
                style="@style/estiloLabel"/>

            <Spinner
                android:id="@+id/spCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/arrayCategorias">

            </Spinner>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtTipo"
                    style="@style/estiloLabel"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        style="@style/estiloCampos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtOrcamento" />

                    <RadioButton
                        style="@style/estiloCampos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtServico" />

                </RadioGroup>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                style="@style/estiloLabel"/>

            <CheckBox
                style="@style/estiloCampos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtFinalizada" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txtSalvar" />


        </LinearLayout>

    </ScrollView>

